Added double quotes to paths in CMakeLists.txt

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -6,10 +6,10 @@
 # Distributed under the Boost Software License, Version 1.0. (See accompanying
 # file licence_1_0.txt or copy at http://www.boost.org/LICENSE_1_0.txt)
 #
-file(GLOB dirs RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/*)
-foreach(dir ${dirs})
-  if(IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/${dir})
+file(GLOB dirs RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "${CMAKE_CURRENT_SOURCE_DIR}"/*)
+foreach(dir "${dirs}")
+  if(IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/${dir}")
     message(STATUS "Adding example: ${dir}")
-    add_subdirectory(${dir})
+    add_subdirectory("${dir}")
   endif()
 endforeach()
