Now checking conformance of error msgs. 26 errors left to check.

--- a/test/test.vcxproj
+++ b/test/test.vcxproj
@@ -80,7 +80,7 @@
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="fail_test.cpp" />
+    <ClCompile Include="fail_tests.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
