--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -6,6 +6,7 @@
 # Distributed under the Boost Software License, Version 1.0. (See accompanying
 # file licence_1_0.txt or copy at http://www.boost.org/LICENSE_1_0.txt)
 #
+set (EXCLUDE_DIR "/CMakeFiles/")
 file(GLOB dirs RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "${CMAKE_CURRENT_SOURCE_DIR}/*")
 foreach(dir ${dirs})
   if(IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/${dir}")
