Updated the build system and fixed some bugs
- Switched to CMake 3.5 with targets
- Fixed warnings for paranthesis and conjunction / disjunction
- Switched unicode example to c++11

--- a/examples/unicode/CMakeLists.txt
+++ b/examples/unicode/CMakeLists.txt
@@ -7,3 +7,5 @@
 # file licence_1_0.txt or copy at http://www.boost.org/LICENSE_1_0.txt)
 #
 add_executable(lexertl_unicode main.cpp)
+target_link_libraries(lexertl_unicode PRIVATE lexertl)
+target_compile_features(lexertl_unicode PUBLIC cxx_std_11)
