--- a/examples/date_test/CMakeLists.txt
+++ b/examples/date_test/CMakeLists.txt
@@ -7,3 +7,4 @@
 # file licence_1_0.txt or copy at http://www.boost.org/LICENSE_1_0.txt)
 #
 add_executable(lexertl_date_test main.cpp)
+target_link_libraries(lexertl_date_test PRIVATE lexertl)
