Added install instructions to cmake.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,11 +7,16 @@
 # file licence_1_0.txt or copy at http://www.boost.org/LICENSE_1_0.txt)
 #
 cmake_minimum_required (VERSION 3.5)
-project(lexertl)
+project(lexertl VERSION 0.1.0)
 
+# Define project
 add_library(lexertl INTERFACE)
-target_include_directories(lexertl INTERFACE "${CMAKE_SOURCE_DIR}/lexertl")
+target_include_directories(lexertl INTERFACE 
+	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+	$<INSTALL_INTERFACE:include>
+)
 
+# Add custom requirements for the compiler
 if(MSVC)
   if(MSVC80 OR MSVC90 OR MSVC10 OR MSVC11 OR MSVC12)
     add_definitions(-D_CRT_SECURE_NO_DEPRECATE)
@@ -48,4 +53,28 @@ if(CMAKE_CXX_COMPILER MATCHES "clang")
   target_compile_options(lexertl PRIVATE "-Wall -Wextra -pedantic -Wno-long-long")
 endif()
 
+# Add the examples
 add_subdirectory(examples)
+
+# Generate install
+install(TARGETS lexertl EXPORT lexertlTargets
+	ARCHIVE DESTINATION lib
+	LIBRARY DESTINATION lib
+	RUNTIME DESTINATION bin
+	PUBLIC_HEADER DESTINATION include
+)
+install(DIRECTORY include/lexertl DESTINATION include)
+install(EXPORT lexertlTargets
+	FILE lexertlTargets.cmake
+	NAMESPACE lexertl::
+	DESTINATION lib/cmake/lexertl
+)
+include(CMakePackageConfigHelpers)
+write_basic_package_version_file("lexertlConfigVersion.cmake"
+	VERSION ${lexertl_VERSION}
+	COMPATIBILITY SameMajorVersion
+)
+install(FILES "lexertlConfig.cmake" "${CMAKE_CURRENT_BINARY_DIR}/lexertlConfigVersion.cmake"
+	DESTINATION lib/cmake/lexertl
+)
+
